[package]
name = "Overlord-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["trace"] }
bevy_ecs_tilemap = "0.16.0"
bevy_simple_subsecond_system = "0.2.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
